# gabo

./: .env.example  .gitignore  Makefile  README.md  licence  pyproject.toml
.github/workflows/: ci.yml
desktop/: .gitignore  dev.sh  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  sat-api.spec  tsconfig.node.json  tsconfig.web.json
scripts/: build-sidecar.py
src/sat/: __init__.py  artifacts.py  cli.py  config.py  errors.py  events.py  (+3 more)
tests/: __init__.py  conftest.py  helpers.py  test_adversarial_synthesis_feed.py  test_api.py  test_artifacts.py  test_auth.py  test_build_adversarial_config.py  test_build_config.py  test_build_evidence_pool.py  test_cli.py  test_concurrency.py  test_config_challenger.py  test_config_research_providers.py  test_decomposition_dedup.py  test_decomposition_extractor.py  test_decomposition_prompts.py  test_dotenv.py  test_dynamic_evidence_progress.py  test_errors.py  test_events.py  test_evidence_aggregation.py  test_evidence_api.py  test_evidence_dedup.py  test_evidence_events.py  test_evidence_formatter.py  test_evidence_gatherer.py  test_evidence_item_create_api.py  test_evidence_item_edit_api.py  test_evidence_lineage.py  test_evidence_models.py  test_evidence_persistence.py  test_evidence_pool_api.py  test_evidence_pool_import_api.py  test_evidence_sources_api.py  test_evidence_sources_curated_api.py  test_evidence_xrefs.py  test_gap_resolution_toggle.py  test_gap_resolver.py  test_ingestion_fetcher.py  (+29 more)
tmp/: commit-msg.txt  explore-findings.md  explore-overflow-20260314-135558.md  explore-overflow-20260314-135810.md  waves-7-8-summary.md
(+247 files in other folders)
